--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/Apple.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Apple.data.br",
-        frameworkUrl: buildUrl + "/Apple.framework.js.br",
-        codeUrl: buildUrl + "/Apple.wasm.br",
+        dataUrl: buildUrl + "/Apple.data.unityweb",
+        frameworkUrl: buildUrl + "/Apple.framework.js.unityweb",
+        codeUrl: buildUrl + "/Apple.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "JUMP",
         productName: "Apple",
