--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Apple.loader.js";
+      var loaderUrl = buildUrl + "/MaroApple.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Apple.data.unityweb",
-        frameworkUrl: buildUrl + "/Apple.framework.js.unityweb",
-        codeUrl: buildUrl + "/Apple.wasm.unityweb",
+        dataUrl: buildUrl + "/MaroApple.data.unityweb",
+        frameworkUrl: buildUrl + "/MaroApple.framework.js.unityweb",
+        codeUrl: buildUrl + "/MaroApple.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "JUMP",
         productName: "Apple",
